# RecipeBot

./: .dockerignore  .env.development.example  .env.example  .gitignore  .tool-versions  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/config/: settings.py
app/db/: models.py  session.py
app/devvit/: __init__.py  auth.py  contracts.py  ingestion.py
app/jobs/: service.py  states.py  worker.py
app/recipes/: extractor.py  slug.py
app/reddit/: client.py  commands.py  delivery.py  ingestion.py  listener.py  messages.py  source_resolver.py
app/rendering/: card_spec.py  imagemagick.py  renderer.py  svg_layout.py
app/storage/: artifacts.py
app/web/: __init__.py  server.py
devvit/: README.md  devvit.json  package-lock.json  package.json
devvit/scripts/: build-server.mjs  copy-server-bundle.mjs
devvit/src/: app.ts  command.ts  hmac.ts  main.ts  recipebotClient.ts  redditReply.ts  redditSource.ts  serverApp.ts
docs/: architecture.md  hemlock-deploy.md
migrations/: env.py  script.py.mako
scripts/: create_sample_job.py  render_sample.py  run_reddit_listener.py  run_web.py  run_worker_once.py
tests/: test_artifacts.py  test_card_spec.py  test_devvit_endpoint.py  test_devvit_ingestion.py  test_extractor.py  test_imagemagick.py  test_job_service.py  test_production_compose.py  test_reddit_client.py  test_reddit_commands.py  test_reddit_delivery.py  test_reddit_ingestion.py  test_reddit_listener.py  test_reddit_messages.py  test_settings.py  test_slug.py  test_source_resolver.py  test_web.py  test_worker.py
(+9 files in other folders)
