[project]
name = "recipebot"
version = "0.1.0"
description = "Reddit recipe card bot using Python, Postgres, and ImageMagick."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<0.116",
    "praw>=8.0,<9",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pytest>=8.3,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
